# opendeck-spotify-controller

./: Cargo.toml  README.md  manifest.json
src/: gfx.rs  main.rs  plugin.rs  scroll.rs  spotify.rs  tiles.rs
